Fixed overflow of phone num chips in contact box

--- a/src/App.scss
+++ b/src/App.scss
@@ -1276,6 +1276,7 @@ h6 {
       .result-contacts {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         width: 100%;
       }
 
